--- a/views/pickup_delivery_view.xml
+++ b/views/pickup_delivery_view.xml
@@ -15,7 +15,7 @@
 				<form string="Request Form" version="7.0">
 					<group>
 						<field name="partner_id"/>
-						<field name="name"/>
+						<field name="name" readonly="1"/>
 						<field name="request_type"/>
 						<field name="address"/>
 						<field name="request_date"/>
