--- a/views/courier.xml
+++ b/views/courier.xml
@@ -157,7 +157,46 @@
 
 		<!-- Fee Setting =============================================================================================================== -->
 
+		<record id="corier_fee_report_form" model="ir.ui.view">
+			<field name="name">courier.fee.log.report.form</field>
+			<field name="model">courier.fee.log.report</field>
+			<field name="arch" type="xml">
+				<form >
+					<group>
+						<field name="name" />
+						<field name="date_from" />
+						<field name="date_to" />
+						<field name="courier_id" />
+					</group>
+				</form>
+			</field>
+		</record>
 
+		<record model="ir.ui.view" id="courier_fee_report_tree">
+			<field name="name">courier.fee.log.report.tree</field>
+			<field name="model">courier.fee.log.report</field>
+			<field name="arch" type="xml">
+				<tree >
+					<field name="name" />
+					<field name="date_from" />
+					<field name="date_to" />
+					<field name="courier_id" />
+				</tree>
+			</field>
+		</record>
+
+		
+
+		<record id="courier_action_fee_log_setting" model="ir.actions.act_window">
+			<field name="name">Courier Fee Log Report</field>
+			<field name="res_model">courier.fee.log.report</field>
+			<field name="view_type">form</field>
+			<field name="view_mode">tree,form</field>
+		</record>
+
+		<menuitem sequence="1" id="courier_menu_fee_log_setting" parent="fee_log" action="courier_action_fee_log_setting" />
+
+		
 	</data>
 </openerp>
 
