--- a/views/courier.xml
+++ b/views/courier.xml
@@ -132,10 +132,12 @@
 				view_type="form"
 				view_mode="form"
 				view_id="approve_all_view"
+				key2="client_action_multi"
 				target="new"
 			/>
 		
 		<record model="ir.values" id="action_testing">
+	    	<!-- <field name="model_id" ref="courier.model" /> -->
 			<field name="name">Reverse Moves</field>
 			<field name="key2">client_action_multi</field>
 			<field name="value" eval="'ir.actions.act_window,' +str(ref('approve_all'))" />
