--- a/reports/report_print_trip_line.xml
+++ b/reports/report_print_trip_line.xml
@@ -2,9 +2,11 @@
 	<data>
 
 		<template id="report_print_trip_line_template">
-			<t t-call="report.html_container">
-				<t t-foreach="docs" t-as="o">
-					<t t-call="membership_point.report_print_trip_line_document_template" />
+			<t t-foreach="docs" t-as="o">
+				<t t-foreach="o.trip_line_ids" t-as="trip">
+					<t t-call="report.html_container">
+						<t t-call="pickup_delivery.report_print_trip_line_document_template" />
+					</t>
 				</t>
 			</t>
 		</template>
@@ -12,9 +14,10 @@
 		<template id="report_print_trip_line_document_template">
 			<div class="page">
 				<!-- PENGATURAN TEMPLATE -->
-				<t t-foreach="o.trip_line_ids" t-as="trip">
+					
 					<span t-field="trip.request_id.name" />
-					<span t-field="trip.request_desc" />
+					<span t-field="trip.address" />
+					<h2>====================</h2>
 				<!--<span t-field="trip.address" />
 					<span t-field="trip.delivery_type" />
 					<span t-field="trip.expedition_id.name" />
@@ -22,7 +25,7 @@
 					<span t-field="trip.execute_status" />
 					<span t-field="trip.partner_pic" />
 				-->
-				</t>
+				
 			</div>
 		</template>
 
