--- a/views/courier.xml
+++ b/views/courier.xml
@@ -109,7 +109,7 @@
 				</tree>
 			</field>
 		</record>
-		
+	<!-- 	
 		<record id="approve_all_view" model="ir.ui.view">
 			<field name="name">approve.all.view</field>
 			<field name="model">courier.fee.log</field>
@@ -135,14 +135,13 @@
 			/>
 		
 		<record model="ir.values" id="action_testing">
-			<!-- <field name="model_id" ref="courier.model" /> -->
 			<field name="name">Reverse Moves</field>
 			<field name="key2">client_action_multi</field>
 			<field name="value" eval="'ir.actions.act_window,' +str(ref('approve_all'))" />
 			<field name="key">action</field>
 			<field name="model">courier.fee.log</field>
 		</record>
-
+ -->
 		
 
 
@@ -202,7 +201,31 @@
 
 		<menuitem sequence="1" id="courier_menu_fee_log_setting" parent="fee_log" action="courier_action_fee_log_setting" />
 
+
+		<!-- Fee Log Report =============================================================================================================== -->
 		
+		<record id="approve_all_view" model="ir.ui.view">
+            <field name="name">confirm.fee.log.form</field>
+            <field name="model">confirm.fee.log</field>
+            <field name="arch" type="xml">
+                <form string="Approve All">
+                    <p class="oe_grey">
+                       Are you sure to approve all the fee log?
+                    </p>
+                    <footer>
+                        <button string="Approve All" name="action_approve_all" type="object" default_focus="1" class="oe_highlight"/>
+                        or
+                        <button string="Cancel" class="oe_link" special="cancel"/>
+                    </footer>
+                </form>
+            </field>
+        </record>
+
+        <act_window id="action_approve_all_button"
+            multi="True"
+            key2="client_action_multi" name="Approve All"
+            res_model="confirm.fee.log" src_model="courier.fee.log"
+            view_mode="form" target="new" view_type="form" />
 	</data>
 </openerp>
 
