--- a/views/courier.xml
+++ b/views/courier.xml
@@ -15,7 +15,9 @@
 						<field name="fee_type" />
 						<field name="trip_fee" attrs="{'invisible': [('fee_type','=','per_address')]}" />
 						<field name="address_fee" attrs="{'invisible': [('fee_type','=','per_trip')]}" />
-						<field name="delivered_bonus" />
+						<field name="delivered_bonus" attrs="{'invisible': [('fee_type','=','per_trip')]}"/>
+						<field name="valid_from" />
+						<field name="valid_through" />
 					</group>
 				</form>
 			</field>
@@ -31,6 +33,8 @@
 					<field name="trip_fee" attrs="{'invisible': [('fee_type','=','per_address')]}" />
 					<field name="address_fee" attrs="{'invisible': [('fee_type','=','per_trip')]}" />
 					<field name="delivered_bonus" />
+					<field name="valid_from" />
+					<field name="valid_through" />
 				</tree>
 			</field>
 		</record>
