--- a/reports/pickup_delivery.xml
+++ b/reports/pickup_delivery.xml
@@ -1,7 +1,7 @@
 <openerp>
 	<data>
 
-<!-- 		<record id="paperformat_for_trip_line" model="report.paperformat">
+		<record id="paperformat_for_trip_line" model="report.paperformat">
 			<field name="name">Paper format for trip line</field>
 			<field name="default" eval="True" />
 			<field name="format">A4</field>
@@ -29,6 +29,6 @@
 		<record id="pickup_delivery_print_trip_line_report" model="ir.actions.report.xml">
 			<field name="paperformat_id" ref="pickup_delivery.paperformat_for_trip_line"></field>
 		</record>
- -->
+
 	</data>
 </openerp>
